fix: update integration tests